restate and simplify the application-quit and application-don't-quit-while-windows-are-open logic. bug 163710 r=brendan,pinkerton